--- a/assets/global.css
+++ b/assets/global.css
@@ -7,20 +7,41 @@
   -webkit-text-size-adjust: 100%;
 }
 
+/* For Mobile */
+@media screen and (max-width: 540px) {
+  html {
+    font-size: 8px;
+  }
+
+  .flex-box {
+    flex-direction: column;
+  }
+}
+
+/* For Others */
+@media screen and (min-width: 540px) {
+  html {
+    font-size: 16px;
+  }
+
+  .flex-box {
+    flex-direction: row;
+  }
+}
+
 html {
   height: 100%;
 }
 
 body {
   margin: 0;
-  font-size: 16px;
+  font-size: 1rem;
   height: 100%;
 }
 
 .flex-box {
   height: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -31,6 +52,7 @@ body {
 
 .form-box {
   flex-basis: 50%;
+  flex: none;
   max-width: 42rem;
   margin-top: -6em;
   padding: 1.5rem 2rem;
@@ -41,6 +63,7 @@ body {
 #input-form .top-header {
   text-align: center;
   margin: 1rem 0;
+  font-size: 2rem;
 }
 
 #input-form div.header {
@@ -89,7 +112,7 @@ body {
   border-style: solid;
   border-width: 1px;
   border-color: black;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 #input-form div.button {
@@ -105,6 +128,6 @@ body {
   color: #ffffff;
   background-color: #3b82f6;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
   padding: 0.5rem 0.75rem;
 }
