--- a/assets/global.css
+++ b/assets/global.css
@@ -12,12 +12,20 @@
   html {
     font-size: 8px;
   }
+
+  #prerequisite .flex-box {
+    flex-direction: column;
+  }
 }
 
 /* For Others */
 @media screen and (min-width: 540px) {
   html {
     font-size: 16px;
+  }
+
+  #prerequisite .flex-box {
+    flex-direction: row;
   }
 }
 
@@ -29,4 +37,170 @@ body {
   margin: 0;
   font-size: 1rem;
   height: 100%;
+}
+
+#prerequisite {
+  height: 100%;
+}
+
+#prerequisite .flex-box {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#prerequisite .flex-box section {
+  flex-basis: 25%;
+}
+
+#prerequisite .flex-box .form-box {
+  flex-basis: 50%;
+  flex: none;
+  max-width: 42rem;
+  margin-top: -6em;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  border-bottom-width: 1px;
+}
+
+#student-input-form .top-header {
+  text-align: center;
+  margin: 1rem 0;
+  font-size: 2rem;
+}
+
+#student-input-form .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#student-input-form .header .crop {
+  flex-shrink: 0;
+  max-width: 12rem;
+  height: 8rem;
+  overflow: hidden;
+}
+
+#student-input-form .header .crop img {
+  width: 16rem;
+  height: auto;
+  margin: -4rem 0 0 -2rem;
+  object-fit: cover;
+}
+
+#student-input-form .header h1 {
+  margin-left: 3rem;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
+#student-input-form .grid {
+  display: grid;
+  margin-top: 1.25rem;
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
+#student-input-form .grid label {
+  grid-column: span 2;
+  padding: 1rem 0;
+}
+
+#student-input-form .grid input[type="text"] {
+  grid-column: span 6;
+  margin: 0.5rem 0;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  font-size: 1rem;
+}
+
+#student-input-form .button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#student-input-form input[type="submit"] {
+  border-radius: 0.25rem;
+  border-color: #ffffff;
+  color: #ffffff;
+  background-color: #3b82f6;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0.5rem 0.75rem;
+}
+
+#main .flex-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#main .flex-box .crop {
+  flex-shrink: 0;
+  max-width: 18rem;
+  height: 12rem;
+  overflow: hidden;
+}
+
+#main .flex-box .crop img {
+  width: 22rem;
+  height: auto;
+  margin: -5rem 0 0 -2rem;
+  object-fit: cover;
+}
+
+#main .flex-box .form-box {
+  max-width: 42rem;
+  margin-top: 2rem;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  border-bottom-width: 1px;
+}
+
+#sign-language-input-form .header h1 {
+  margin-left: 3rem;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
+#sign-language-input-form {
+  display: flex;
+  flex-direction: column;
+}
+
+#sign-language-input-form textarea {
+  padding: 0.25rem;
+  margin: 1rem 0;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  font-size: 1rem;
+  resize: none;
+}
+
+#sign-language-input-form .button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#sign-language-input-form input[type="submit"] {
+  border-radius: 0.25rem;
+  border-color: #ffffff;
+  color: #ffffff;
+  background-color: #3b82f6;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0.5rem 0.75rem;
 }
