--- a/assets/global.css
+++ b/assets/global.css
@@ -55,7 +55,6 @@ body {
 }
 
 #prerequisite .flex-box .form-box {
-  flex-basis: 50%;
   flex: none;
   max-width: 42rem;
   margin-top: -6em;
@@ -136,11 +135,16 @@ body {
   padding: 0.5rem 0.75rem;
 }
 
+#main {
+  padding-bottom: 4rem;
+}
+
 #main .flex-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 1rem;
 }
 
 #main .flex-box .crop {
@@ -159,7 +163,7 @@ body {
 
 #main .flex-box .form-box {
   max-width: 42rem;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   padding: 1.5rem 2rem;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   border-bottom-width: 1px;
@@ -176,6 +180,17 @@ body {
 #sign-language-input-form {
   display: flex;
   flex-direction: column;
+}
+
+#sign-language-input-form p {
+  margin-top: 0;
+  margin-bottom: 1.5rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.02em;
+}
+
+#sign-language-input-form label {
+  letter-spacing: 0.03em;
 }
 
 #sign-language-input-form textarea {
@@ -203,4 +218,34 @@ body {
   font-weight: 600;
   font-size: 1rem;
   padding: 0.5rem 0.75rem;
+}
+
+#sign-language-img {
+  max-width: 60rem;
+}
+
+#sign-language-img .flex-box {
+  margin-top: 3rem;
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+	gap: 6px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+}
+
+#sign-language-img img {
+  width: 8rem;
+  height: auto;
+  object-fit: cover;
+}
+
+#sign-language-img p {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
 }
