--- a/assets/style.css
+++ b/assets/style.css
@@ -13,8 +13,61 @@
     font-size: 8px;
   }
 
+  body {
+    height: 100vh;
+  }
+
+  section {
+    height: 20vh;
+    top: 0;
+    margin: 30px 0px 120px 0px;
+
+  }
+
   #prerequisite .flex-box {
     flex-direction: column;
+  }
+
+  .ads {
+    display: none;
+  }
+
+  .ads-2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: rgb(0, 0, 0);
+    height: 25vh;
+    width: 80vw;
+    background: #ffffff26;
+    border-radius: 15px;
+
+    h1 {
+      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      background-color: rgb(231, 122, 122);
+      margin: 0 10px 0 0px;
+      width: 30%;
+      color: white;
+      text-align: center;
+      border-radius: 9px;
+      height: 80%;
+      font-size: 1.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      #sponser {
+        font-weight: bold;
+        font-size: 2rem;
+      }
+    }
+
+    img {
+      width: 70%;
+      opacity: 90%;
+      border-radius: 5px;
+    }
   }
 }
 
@@ -26,6 +79,40 @@
 
   #prerequisite .flex-box {
     flex-direction: row;
+  }
+
+  .ads {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 20px 0 20px;
+    margin-top: 1rem;
+    color: rgb(0, 0, 0);
+    height: 90vh;
+    background: #ffffff26;
+    border: 1px solid #000000;
+    border-radius: 15px;
+    h1 {
+      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      margin-bottom: 3rem;
+      background-color: rgb(231, 122, 122);
+      width: 100%;
+      color: white;
+      text-align: center;
+      padding: 0.5rem;
+      border-radius: 9px;
+    }
+    img {
+      width: 90%;
+      opacity: 90%;
+      border-radius: 5px;
+    }
+  }
+
+  .ads-2 {
+    display: none;
   }
 }
 
@@ -232,7 +319,7 @@ body {
   flex-direction: row;
   justify-content: left;
   align-items: center;
-	gap: 6px;
+  gap: 6px;
   border-style: solid;
   border-width: 1px;
   border-color: black;
