--- a/assets/style.css
+++ b/assets/style.css
@@ -35,13 +35,13 @@
   .ads-2 {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     color: rgb(0, 0, 0);
     height: 25vh;
     width: 80vw;
     background: #ffffff26;
     border-radius: 15px;
+    /* border: 1px solid #000000; */
 
     h1 {
       font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -52,7 +52,7 @@
       color: white;
       text-align: center;
       border-radius: 9px;
-      height: 80%;
+      height: 100%;
       font-size: 1.5rem;
       display: flex;
       align-items: center;
@@ -66,6 +66,7 @@
     img {
       width: 70%;
       opacity: 90%;
+      /* border-radius: 5px 15px 15px 5px; */
       border-radius: 5px;
     }
   }
@@ -91,7 +92,7 @@
     color: rgb(0, 0, 0);
     height: 75vh;
     background: #ffffff26;
-    border: 1px solid #000000;
+    border: 1px solid rgb(231, 122, 122);
     border-radius: 15px;
     h1 {
       font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
