--- a/assets/style.css
+++ b/assets/style.css
@@ -13,62 +13,12 @@
     font-size: 8px;
   }
 
-  body {
-    height: 100vh;
-  }
-
-  section {
-    height: 20vh;
-    top: 0;
-    margin: 30px 0px 120px 0px;
-
-  }
-
-  .flex-box {
-    flex-direction: column;
-  }
-
-  .ads {
-    display: none;
-  }
-
-  .ads-2 {
+  .ads-portrait {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: rgb(0, 0, 0);
-    height: 25vh;
-    width: 80vw;
-    background: #ffffff26;
-    border-radius: 15px;
-    /* border: 1px solid #000000; */
+  }
 
-    h1 {
-      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-      background-color: rgb(231, 122, 122);
-      margin: 0 10px 0 0px;
-      width: 30%;
-      color: white;
-      text-align: center;
-      border-radius: 9px;
-      height: 100%;
-      font-size: 1.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      #sponser {
-        font-weight: bold;
-        font-size: 2rem;
-      }
-    }
-
-    img {
-      width: 70%;
-      opacity: 90%;
-      /* border-radius: 5px 15px 15px 5px; */
-      border-radius: 5px;
-    }
+  :is(.ads-left, .ads-right) {
+    display: none;
   }
 }
 
@@ -76,54 +26,6 @@
 @media screen and (min-width: 640px) {
   html {
     font-size: 12px;
-  }
-
-  .flex-box {
->>>>>>> chijian-branch
-    flex-direction: column;
-  }
-
-  .ads {
-    display: none;
-  }
-
-  .ads-2 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: rgb(0, 0, 0);
-    height: 25vh;
-    width: 80vw;
-    background: #ffffff26;
-    border-radius: 15px;
-    /* border: 1px solid #000000; */
-
-    h1 {
-      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-      background-color: rgb(231, 122, 122);
-      margin: 0 10px 0 0px;
-      width: 30%;
-      color: white;
-      text-align: center;
-      border-radius: 9px;
-      height: 100%;
-      font-size: 1.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      #sponser {
-        font-weight: bold;
-        font-size: 2rem;
-      }
-    }
-
-    img {
-      width: 70%;
-      opacity: 90%;
-      /* border-radius: 5px 15px 15px 5px; */
-      border-radius: 5px;
-    }
   }
 }
 
@@ -133,42 +35,16 @@
     font-size: 16px;
   }
 
-  .flex-box {
-    flex-direction: row;
-  }
-
-  .ads {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 20px 0 20px;
-    margin-top: 1rem;
-    color: rgb(0, 0, 0);
-    height: 75vh;
-    background: #ffffff26;
-    border: 1px solid rgb(231, 122, 122);
-    border-radius: 15px;
-    h1 {
-      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-      margin-bottom: 3rem;
-      background-color: rgb(231, 122, 122);
-      width: 100%;
-      color: white;
-      text-align: center;
-      padding: 0.5rem;
-      border-radius: 9px;
-    }
-    img {
-      width: 90%;
-      opacity: 90%;
-      border-radius: 5px;
-    }
-  }
-
-  .ads-2 {
+  .ads-portrait {
     display: none;
+  }
+
+  :is(.ads-left, .ads-right) {
+    display: block;
+  }
+
+  #main {
+    width: 55vw;
   }
 }
 
@@ -179,22 +55,90 @@ html {
 body {
   margin: 0;
   font-size: 1rem;
+  padding-bottom: 2rem;
 }
 
-.flex-box {
+.ads-left {
+  position: fixed;
+  top: 1vh;
+  left: 2vh;
+  bottom: 1vh;
+  border-radius: 15px;
+  border: 1px solid black;
+}
+
+.ads-right {
+  position: fixed;
+  top: 1vh;
+  right: 2vh;
+  bottom: 1vh;
+  border-radius: 15px;
+  border: 1px solid black;
+}
+
+.ads-landscape {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  width: 20vw;
+  padding: 1rem 0;
 }
 
-.flex-box section {
-  flex-basis: 20%;
+.ads-landscape h1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  padding: 0.5rem;
+  width: 100%;
+  background-color: rgb(231, 122, 122);
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+  border-radius: 9px;
+}
+
+.ads-landscape img {
+  width: 90%;
+  opacity: 90%;
+  border-radius: 5px;
+}
+
+.ads-portrait {
+  flex-direction: row;
+  align-items: center;
+  height: 20rem;
+  width: 40rem;
+  margin: 0 auto;
+  margin-top: 1rem;
+  background: #ffffff26;
+  border-radius: 15px;
+}
+
+.ads-portrait h1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: rgb(231, 122, 122);
+  margin-right: 1rem;
+  width: 30%;
+  color: white;
+  text-align: center;
+  border-radius: 9px;
+  height: 80%;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ads-portrait img {
+  width: 70%;
+  opacity: 90%;
+  border-radius: 5px;
 }
 
 #main {
-  flex: none;
-  max-width: 52rem;
-  padding: 2rem 1rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -202,8 +146,8 @@ body {
 }
 
 #main .box {
-  max-width: 42rem;
-  margin-top: 5rem;
+  margin: 0 1rem;
+  margin-top: 4rem;
   padding: 1.5rem 2rem;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   border-bottom-width: 1px;
@@ -281,10 +225,6 @@ body {
   padding: 0.5rem 0.75rem;
 }
 
-#sign-language-img {
-  max-width: max-content;
-}
-
 #sign-language-img .student-info {
   margin: 1.5rem 0rem;
   text-align: center;
@@ -292,20 +232,20 @@ body {
 }
 
 #sign-language-img .flex-box {
-  padding: 1rem;
+  max-width: max-content;
+  margin: 0 1rem;
+  padding: 0.5rem;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: left;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
-	gap: 0.25rem;
   border-style: solid;
   border-width: 1px;
   border-color: black;
 }
 
 #sign-language-img .sign-box {
-  flex: 0 1 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
