--- a/assets/style.css
+++ b/assets/style.css
@@ -64,7 +64,7 @@ body {
   left: 2vh;
   bottom: 1vh;
   border-radius: 15px;
-  border: 1px solid black;
+  border: 1px solid rgb(231, 122, 122);
 }
 
 .ads-right {
@@ -73,7 +73,7 @@ body {
   right: 2vh;
   bottom: 1vh;
   border-radius: 15px;
-  border: 1px solid black;
+  border: 1px solid rgb(231, 122, 122);
 }
 
 .ads-landscape {
